# Lab10

./: .travis.yml  CMakeLists.txt  README.md
List/: TList.h
Polinom/: CMakeLists.txt  Polinom.cpp  Polinom.h  TMonom.cpp  TMonom.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TList.cpp  test_TMonom.cpp  test_TPolinom.cpp
